--- a/docs/stylesheet.css
+++ b/docs/stylesheet.css
@@ -52,6 +52,7 @@ a:hover img	{ background-color: #FFFFFF }
 TD.menu {
 	color: #000000;
 	background-color: #AAAAAA;
-}
+; border-style: none; border-top-width: 2px; border-right-width: 2px; border-bottom-width: 2px; border-left-width: 2px}
 
 
+table {  padding-top: 8px; padding-right: 8px; padding-bottom: 8px; padding-left: 8px}
