--- a/dbunit-maven-plugin/src/site/apt/examples/clean-insert.apt.vm
+++ b/dbunit-maven-plugin/src/site/apt/examples/clean-insert.apt.vm
@@ -21,7 +21,7 @@ Clean-Insert Example
     <plugins>
       [...]
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
+        <groupId>org.dbunit</groupId>
         <artifactId>dbunit-maven-plugin</artifactId>
         <version>${project.version}</version>
         
